--- a/conf/path.conf
+++ b/conf/path.conf
@@ -1,7 +1,17 @@
 root = "./"
-luaservice = root.."?.lua;"..root.."service/?.lua;"..root.."skynet/service/?.lua"
+
 lualoader = root .. "skynet/lualib/loader.lua"
-lua_path = root.."lualib/?.lua;"..root.."skynet/lualib/?.lua;"..root.."module/?.lua;"..root.."conf/?.lua"
+
+-- lua程序位置
+lua_path = root.."lualib/?.lua;"..root.."skynet/lualib/?.lua"
+
+-- C程序位置
 lua_cpath = root .. "luaclib/?.so;"..root .. "skynet/luaclib/?.so"
+
+-- lua服务位置  service目录下一个目录是一个服务，启动文件是每个目录下的init.lua 文件
+luaservice = root.."service/?.lua;"..root.."service/?/init.lua;"..root.."skynet/service/?.lua"
+
+-- C编写的服务模块的位置
 cpath = root.."skynet/cservice/?.so"
+
 snax = root.."examples/?.lua;"..root.."test/?.lua"
