--- a/conf/server.conf
+++ b/conf/server.conf
@@ -7,8 +7,8 @@ daemon = nil
 harbor = 0
 start = "main"
 
-logger = nil
-logpath = "."
+-- logger = "test.log"
+-- logpath = root.."log"
 
 -- address = "127.0.0.1:2526"
 -- master = "127.0.0.1:2013"
